Fix #61 Popup alignment issue

--- a/Online-Workout-Manager/public/stylesheets/style.css
+++ b/Online-Workout-Manager/public/stylesheets/style.css
@@ -63,5 +63,5 @@ a:link {
 
 .move-type-selector{
      float:right;
-     width:185px;
+     width: 100%;
 }
